--- a/package.xml
+++ b/package.xml
@@ -9,7 +9,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>framework_vision</depend>
   <depend>keisan</depend>
-  <depend>OpenCV</depend>
+  <depend>libopencv-dev</depend>
   <depend>robocup_client</depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
